<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.myproject.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.myproject.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_watch"
        android:name="com.example.myproject.ui.watch.WatchFragment"
        android:label="@string/title_watch"
        tools:layout="@layout/fragment_watch" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.myproject.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
</navigation>